animation toggle work

--- a/modules/keybinds.conf
+++ b/modules/keybinds.conf
@@ -4,7 +4,8 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, B, exec, firefox
+bind = $mainMod, B, exec, $default_browser
+bind = $mainMod, C, exec, code
 
 # --- WINDOW MANAGEMENT ---
 bind = $mainMod, Q, killactive,          # Polite close (ask app to close)
@@ -15,6 +16,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,              # Dwindle effect
 bind = $mainMod, J, togglesplit,         # Dwindle split
 
+bind = $mainMod ALT, I, exec, ~a/.config/hypr/scripts/toggle_anim.sh
+
 # --- SESSION ---
 bind = $mainMod CTRL, L, exit,           # Logout of Hyprland
 
@@ -23,6 +26,27 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# --- MOVE WINDOW (Super + Ctrl + Arrow) ---
+# Moves the window to a new position in the layout
+bind = $mainMod CTRL, left, movewindow, l
+bind = $mainMod CTRL, right, movewindow, r
+bind = $mainMod CTRL, up, movewindow, u
+bind = $mainMod CTRL, down, movewindow, d
+
+# --- SWAP WINDOW (Super + Alt + Arrow) ---
+# Swaps content with the neighbor, keeping layout structure
+bind = $mainMod ALT, left, swapwindow, l
+bind = $mainMod ALT, right, swapwindow, r
+bind = $mainMod ALT, up, swapwindow, u
+bind = $mainMod ALT, down, swapwindow, d
+
+# --- RESIZE WINDOW (Super + Shift + Arrow) ---
+# "binde" allows holding the key for smooth resizing
+binde = $mainMod SHIFT, right, resizeactive, 20 0
+binde = $mainMod SHIFT, left, resizeactive, -20 0
+binde = $mainMod SHIFT, up, resizeactive, 0 -20
+binde = $mainMod SHIFT, down, resizeactive, 0 20
 
 # --- WORKSPACES (1-10) ---
 bind = $mainMod, 1, workspace, 1
