--- a/modules/settings.conf
+++ b/modules/settings.conf
@@ -2,6 +2,7 @@
 $terminal = kitty
 $fileManager = dolphin 
 $menu = walker
+$default_browser = firefox
 
 # --- ENVIRONMENT ---
 env = XCURSOR_SIZE,24
@@ -19,10 +20,11 @@ input {
 
 # --- LOOK & FEEL ---
 general {
-    gaps_in = 5
-    gaps_out = 15
+    gaps_in = 3
+    gaps_out = 10
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(ff0000ee) rgba(ff8800ee) 45deg     # Red to Orange gradient (Fire look)
+    #col.active_border = rgba(ff0000ee) rgba(ff8800ee) rgba(ffff00ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
@@ -30,10 +32,10 @@ general {
 decoration {
     rounding = 10
     active_opacity = 0.99
-    inactive_opacity = 0.95
+    inactive_opacity = 0.93
     blur {
         enabled = true
-        size = 5
+        size = 2
         passes = 2
     }
 }
