hypaper didnt work yet

--- a/modules/keybinds.conf
+++ b/modules/keybinds.conf
@@ -2,7 +2,7 @@ $mainMod = SUPER
 
 # --- APPLICATION SHORTCUTS ---
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, D, exec, $menu 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $default_browser
 bind = $mainMod, C, exec, code
@@ -16,7 +16,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo,              # Dwindle effect
 bind = $mainMod, J, togglesplit,         # Dwindle split
 
-bind = $mainMod ALT, I, exec, ~a/.config/hypr/scripts/toggle_anim.sh
+bind = $mainMod ALT, I, exec, ~/.config/hypr/scripts/toggle_anim.sh
 
 # --- SESSION ---
 bind = $mainMod CTRL, L, exit,           # Logout of Hyprland
@@ -77,3 +77,8 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# --- SCREENSHOTS ---
+bind = $mainMod, PRINT, exec, ~/.config/hypr/scripts/screenshot.sh active # 1. Instant Active Window (Super + Print) - NO CLICKING NEEDED
+bind = , PRINT, exec, ~/.config/hypr/scripts/screenshot.sh screen # 2. Instant Full Screen (Print Screen) - NO SELECTION NEEDED
+bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
