--- a/modules/settings.conf
+++ b/modules/settings.conf
@@ -1,7 +1,7 @@
 # --- PROGRAM VARIABLES ---
 $terminal = kitty
 $fileManager = dolphin 
-$menu = walker
+$menu = rofi -show drun
 $default_browser = firefox
 
 # --- ENVIRONMENT ---
@@ -41,7 +41,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
