--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -2,4 +2,4 @@
 exec-once = walker --gapplication-service
 exec-once = nm-applet & 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
-exec-once = hyprpaper &
+exec-once = hyprpaper 
