--- a/modules/monitors.conf
+++ b/modules/monitors.conf
@@ -1,3 +1,3 @@
 # Monitor Configuration
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=eDP-1, 1920x1080@60,auto,1
