the volume gui working

--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -3,3 +3,13 @@ exec-once = walker --gapplication-service
 exec-once = nm-applet & 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hyprpaper 
+exec-once = waybar
+exec-once = swaync
+
+# Start SwayOSD server at the top-middle of the screen
+exec-once = swayosd-server
+# Start Bluetooth Applet (The Bluetooth Tray Icon)
+exec-once = blueman-applet &
+# Start Network Manager Applet (The WiFi Tray Icon)
+exec-once = nm-applet --indicator &
+
