--- a/modules/keybinds.conf
+++ b/modules/keybinds.conf
@@ -2,24 +2,30 @@ $mainMod = SUPER
 
 # --- APPLICATION SHORTCUTS ---
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, TAB, exec, $terminal
 bind = $mainMod, D, exec, $menu 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $default_browser
 bind = $mainMod, C, exec, code
+bind = $mainMod SHIFT, b, exec, pkill waybar || waybar &
+bind = SUPER, N, exec, swaync-client -t -sw # Toggle Notification Center
+
 
 # --- WINDOW MANAGEMENT ---
 bind = $mainMod, Q, killactive,          # Polite close (ask app to close)
 bind = $mainMod CTRL, Q, exec, hyprctl kill # Force Kill (Click a window to destroy it)
 bind = $mainMod SHIFT, Q, exec, hyprctl activewindow -j | jq '.pid' | xargs kill -9 # FORCE KILL (Nuclear option)
 
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo,              # Dwindle effect
 bind = $mainMod, J, togglesplit,         # Dwindle split
+bind = $mainMod CTRL, F, fullscreen, 1 # Fake Fullscreen (Maximize app, keep Waybar)
+bind = $mainMod SHIFT, F, fullscreen, 0 # Real Fullscreen (Hide Waybar)
 
 bind = $mainMod ALT, I, exec, ~/.config/hypr/scripts/toggle_anim.sh
 
 # --- SESSION ---
-bind = $mainMod CTRL, L, exit,           # Logout of Hyprland
+bind = CTRL ALT, Delete, exit,    # Logout of Hyprland
 
 # --- FOCUS ---
 bind = $mainMod, left, movefocus, l
@@ -82,3 +88,16 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, PRINT, exec, ~/.config/hypr/scripts/screenshot.sh active # 1. Instant Active Window (Super + Print) - NO CLICKING NEEDED
 bind = , PRINT, exec, ~/.config/hypr/scripts/screenshot.sh screen # 2. Instant Full Screen (Print Screen) - NO SELECTION NEEDED
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
+bind = CTRL, Print, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
+
+# --- VOLUME CONTROLS (F1, F2, F3) ---
+bindel = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh up
+bindel = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh down
+bindel = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh mute
+
+# Try the dedicated MicMute key name
+bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/mic.sh
+
+# --- BRIGHTNESS CONTROLS (F9, F10) ---
+bindel = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh up
+bindel = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh down
