--- a/modules/windowrules.conf
+++ b/modules/windowrules.conf
@@ -1,9 +1,73 @@
-# --- WALKER RULES ---
-# 1. Float it (so it doesn't tile)
-windowrulev2 = float, class:^(walker)$
+layerrule {
+  name = rofi
+  blur = on
+  match:namespace = rofi
+}
 
-# 2. No animations (Walker has its own animations, double animation looks weird)
-windowrulev2 = noanim, class:^(walker)$
+layerrule {
+  name = waybar
+  blur = on
+  match:namespace = waybar
+}
 
-# 3. FORCE FOCUS (The fix for your typing issue)
-windowrulev2 = stayfocused, class:^(walker)$
+layerrule {
+  name = tooltip
+  blur = on
+  match:namespace = tooltip
+}
+# Force SwayNC to be on top of everything
+layerrule {
+  name = swaync-control-center
+  ignore_alpha = 0.5
+  blur = on
+  match:namespace = swaync-control-center
+}
+
+layerrule {
+  name = swaync-notification-window
+  ignore_alpha = 0.5
+  blur = on
+  match:namespace = swaync-notification-window
+}
+
+
+# Catch all common file/folder dialogs regardless of the app
+windowrule {
+  name = windowrule-1
+  float = on
+  center = on
+  size = 900 600
+  match:title = ^(Open Folder|Open File|Select Folder|Select File|Save As)$
+}
+
+
+# Specific fix for the window in your screenshot (xdg-desktop-portal-gtk)
+windowrule {
+  name = windowrule-2
+  float = on
+  center = on
+  size = 900 600
+  match:class = ^(xdg-desktop-portal-gtk)$
+}
+
+
+windowrule {
+  name = windowrule-3
+  float = on
+  match:initial_class = ^(code-url-handler)$
+}
+
+windowrule {
+  name = windowrule-4
+  float = on
+  match:initial_title = ^(DevTools)$
+}
+
+#Float
+windowrule {
+  name = windowrule-5
+  float = on
+  center = on
+  size = 800 500
+  match:class = (blueman-manager)
+}
