--- a/modules/settings.conf
+++ b/modules/settings.conf
@@ -31,23 +31,36 @@ general {
 
 decoration {
     rounding = 10
-    active_opacity = 0.99
-    inactive_opacity = 0.93
+    active_opacity = 0.95
+    inactive_opacity = 0.85
     blur {
         enabled = true
-        size = 2
-        passes = 2
+        size = 15
+        passes = 1
     }
 }
 
 animations {
     enabled = false
+
+    # "myBezier" is a custom smooth curve (starts fast, lands soft)
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    # Windows opening/closing
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
+    
+    # Border colors changing
     animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    
+    # Fading in/out
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+
+    # WORKSPACES: This is the important one for you
+    # "slide" makes them move left/right. 
+    # "6" is the speed (higher = slower/smoother).
+    animation = workspaces, 1, 6, default, slide
 }
 
 dwindle {
