--- a/modules/keybinds.conf
+++ b/modules/keybinds.conf
@@ -26,6 +26,7 @@ bind = $mainMod ALT, I, exec, ~/.config/hypr/scripts/toggle_anim.sh
 
 # --- SESSION ---
 bind = CTRL ALT, Delete, exit,    # Logout of Hyprland
+bind = CTRL ALT, L, exec, hyprlock # Lock the screen with Fire Red Hyprlock
 
 # --- FOCUS ---
 bind = $mainMod, left, movefocus, l
