--- a/modules/windowrules-convert.conf
+++ b/modules/windowrules-convert.conf
@@ -1,12 +1,32 @@
-# 2. Force the window to the top-middle
-layerrule = anchor top, swayosd
-layerrule = blur, swayosd
-layerrule = ignorealpha 0.2, swayosd
+# --- WIFI MENU (NM-APPLET) FIXES ---
 
-# Try these three variations. One of them WILL catch it.
-layerrule = anchor top, ^(swayosd)$
-layerrule = anchor top, ^(swayosd-gui)$
-layerrule = anchor top, ^(SwayOSD)$
+# 1. Force it to float and stay on top
+windowrulev2 = float, class:(nm-applet|nm-connection-editor)
+windowrulev2 = pin, class:(nm-applet|nm-connection-editor)
 
-# Add the blur back once it's in the right spot
-layerrule = blur, ^(swayosd.*)$
+# 2. Fix the glitching by forcing it to take focus immediately
+windowrulev2 = stayfocused, class:(nm-applet)
+
+# 3. Size it so it doesn't span the whole screen
+windowrulev2 = size 400 500, class:(nm-applet)
+windowrulev2 = move cursor -50% -50%, class:(nm-applet)
+
+# --- WIFI MENU (NM-APPLET) FIXES ---
+
+# 1. Force it to float and stay on top
+windowrule {
+  name = nm-applet-1
+  float = on
+  pin = on
+  match:class = (nm-applet|nm-connection-editor)
+}
+
+
+# 2. Fix the glitching by forcing it to take focus immediately
+windowrule {
+  name = nm-applet-2
+  stay_focused = on
+  size = 400 500
+  move = (cursor_x+(-(monitor_w*0.5))) (cursor_y+(-(monitor_h*0.5)))
+  match:class = (nm-applet)
+}
