--- a/modules/windowrules.conf
+++ b/modules/windowrules.conf
@@ -71,3 +71,103 @@ windowrule {
   size = 800 500
   match:class = (blueman-manager)
 }
+
+# --- STEAM FLOATING RULES ---
+windowrule {
+  name = steam-1
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (Friends List)
+}
+
+windowrule {
+  name = steam-2
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (Steam - News)
+}
+
+windowrule {
+  name = steam-3
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (.* - Chat)
+}
+
+windowrule {
+  name = steam-4
+  float = on
+  center = on
+  size = 900 800
+  match:class = (steam)
+  match:title = (Steam Settings)
+}
+
+windowrule {
+  name = steam-5
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (.* - event started)
+}
+
+windowrule {
+  name = steam-6
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (CD key)
+}
+
+windowrule {
+  name = steam-7
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (Steam - Self Updater)
+}
+
+windowrule {
+  name = steam-8
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (Screenshot Uploader)
+}
+
+windowrule {
+  name = steam-9
+  float = on
+  center = on
+  size = 500 700
+  match:class = (steam)
+  match:title = (Steam Guard - Computer Authorization)
+}
+
+
+windowrule {
+  name = nm-applet-1
+  float = on
+  pin = on
+  match:class = (nm-applet|nm-connection-editor)
+}
+
+
+# 2. Fix the glitching by forcing it to take focus immediately
+windowrule {
+  name = nm-applet-2
+  stay_focused = on
+  size = 400 500
+  move = (cursor_x+(-(monitor_w*0.5))) (cursor_y+(-(monitor_h*0.5)))
+  match:class = (nm-applet)
+}
