--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -5,6 +5,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hyprpaper 
 exec-once = waybar
 exec-once = swaync
+exec-once = hypridle
 
 # Start SwayOSD server at the top-middle of the screen
 exec-once = swayosd-server
