--- a/modules/autostart.conf
+++ b/modules/autostart.conf
@@ -1,8 +1,8 @@
 # Autostart
-exec-once = walker --gapplication-service
+
 exec-once = nm-applet & 
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
-exec-once = hyprpaper 
+
 exec-once = waybar
 exec-once = swaync
 exec-once = hypridle
@@ -13,4 +13,8 @@ exec-once = swayosd-server
 exec-once = blueman-applet &
 # Start Network Manager Applet (The WiFi Tray Icon)
 exec-once = nm-applet --indicator &
+
+exec-once = swww-daemon
+# Start the daemon and set the wallpaper instantly
+exec-once = swww-daemon && swww img /home/konar/Pictures/Wallpapers/kacchan6.jpg --transition-type none
 
