--- a/modules/keybinds.conf
+++ b/modules/keybinds.conf
@@ -5,8 +5,6 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, TAB, exec, $terminal
 bind = $mainMod, D, exec, $menu 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, B, exec, $default_browser
-bind = $mainMod, C, exec, code
 bind = $mainMod SHIFT, b, exec, pkill waybar || waybar &
 bind = SUPER, N, exec, swaync-client -t -sw # Toggle Notification Center
 
@@ -27,6 +25,12 @@ bind = $mainMod ALT, I, exec, ~/.config/hypr/scripts/toggle_anim.sh
 # --- SESSION ---
 bind = CTRL ALT, Delete, exit,    # Logout of Hyprland
 bind = CTRL ALT, L, exec, hyprlock # Lock the screen with Fire Red Hyprlock
+bind = CTRL ALT, P, exec, systemctl poweroff       #  Turn Off
+bind = CTRL ALT, R, exec, systemctl reboot         # Reboot
+bind = CTRL ALT, S, exec, sleep 1 && systemctl suspend  #  Sleep
+bind = CTRL ALT, M, exec, hyprctl dispatch dpms off #  turn off the monitor only
+bind = CTRL ALT, N, exec, hyprctl dispatch dpms on #  turn on the monitor only
+bind = CTRL ALT, O, exec, ~/.config/hypr/scripts/powermenu.sh
 
 # --- FOCUS ---
 bind = $mainMod, left, movefocus, l
@@ -88,7 +92,7 @@ bindm = $mainMod, mouse:273, resizewindow
 # --- SCREENSHOTS ---
 bind = $mainMod, PRINT, exec, ~/.config/hypr/scripts/screenshot.sh active # 1. Instant Active Window (Super + Print) - NO CLICKING NEEDED
 bind = , PRINT, exec, ~/.config/hypr/scripts/screenshot.sh screen # 2. Instant Full Screen (Print Screen) - NO SELECTION NEEDED
-bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
+bind = $mainMod SHIFT, A, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
 bind = CTRL, Print, exec, hyprshot -m region -o ~/Pictures/Screenshots # 3. Region Select (Super + Shift + S) - Interactive
 
 # --- VOLUME CONTROLS (F1, F2, F3) ---
@@ -102,3 +106,15 @@ bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/mic.sh
 # --- BRIGHTNESS CONTROLS (F9, F10) ---
 bindel = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh up
 bindel = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh down
+
+####APPPPSSSS
+bind = $mainMod, W, exec, "/opt/WhatsApp Desktop/whatsapp-linux-desktop"
+bind = $mainMod, C, exec, code
+bind = $mainMod SHIFT, C, exec, "/opt/google/chrome/google-chrome"
+bind = $mainMod SHIFT, D, exec, "/usr/bin/discord"
+bind = $mainMod, S, exec, steam
+bind = $mainMod CTRL, S, exec, heroic
+bind = $mainMod SHIFT, S, exec, hydralauncher 
+bind = $mainMod CTRL, B, exec, flatpak run com.usebottles.bottles
+bind = $mainMod, B, exec, firefox
+
