--- a/modules/windowrules-convert.conf
+++ b/modules/windowrules-convert.conf
@@ -1,32 +1,23 @@
-# --- WIFI MENU (NM-APPLET) FIXES ---
+# Workspace 1: Communication
+windowrulev2 = workspace 1, class:^(whatsapp-for-linux)$
 
-# 1. Force it to float and stay on top
-windowrulev2 = float, class:(nm-applet|nm-connection-editor)
-windowrulev2 = pin, class:(nm-applet|nm-connection-editor)
+# Workspace 2: Primary Browsing
+windowrulev2 = workspace 2, class:^(firefox)$
 
-# 2. Fix the glitching by forcing it to take focus immediately
-windowrulev2 = stayfocused, class:(nm-applet)
+# Workspace 3: secondary Browsing
+windowrulev2 = workspace 3, class:^(google-chrome)$
 
-# 3. Size it so it doesn't span the whole screen
-windowrulev2 = size 400 500, class:(nm-applet)
-windowrulev2 = move cursor -50% -50%, class:(nm-applet)
+# Workspace 4: Development
+windowrulev2 = workspace 4, class:^(code-url-handler)$
+windowrulev2 = workspace 4, class:^(code)$
 
-# --- WIFI MENU (NM-APPLET) FIXES ---
+# Workspace 5: Game Launchers
+windowrulev2 = workspace 5, class:^(Steam)$
+windowrulev2 = workspace 5, class:^(heroic)$
+windowrulev2 = workspace 5, class:^(hydra)$
 
-# 1. Force it to float and stay on top
-windowrule {
-  name = nm-applet-1
-  float = on
-  pin = on
-  match:class = (nm-applet|nm-connection-editor)
-}
+# Workspace 6: Chat
+windowrulev2 = workspace 6, class:^(discord)$
 
-
-# 2. Fix the glitching by forcing it to take focus immediately
-windowrule {
-  name = nm-applet-2
-  stay_focused = on
-  size = 400 500
-  move = (cursor_x+(-(monitor_w*0.5))) (cursor_y+(-(monitor_h*0.5)))
-  match:class = (nm-applet)
-}
+# Workspace 7: The Games
+windowrulev2 = workspace 7, class:^(steam_app_.*)$
