--- a/modules/windowrules.conf
+++ b/modules/windowrules.conf
@@ -1,3 +1,9 @@
+# Enable switching to the previous workspace if the current one is requested again
+binds {
+    workspace_back_and_forth = true
+    allow_workspace_cycles = true
+}
+
 layerrule {
   name = rofi
   blur = on
@@ -170,4 +176,78 @@ windowrule {
   size = 400 500
   move = (cursor_x+(-(monitor_w*0.5))) (cursor_y+(-(monitor_h*0.5)))
   match:class = (nm-applet)
+}
+
+# Workspace 1: Communication
+windowrule {
+  name = workspacerule-1
+  workspace = 1
+  match:class = ^(WhatsApp.*)$
+}
+
+
+# Workspace 2: Primary Browsing
+windowrule {
+  name = workspacerule-2
+  workspace = 2
+  match:class = ^(firefox)$
+}
+
+
+# Workspace 3: secondary Browsing
+windowrule {
+  name = workspacerule-3
+  workspace = 3
+  match:class = ^(google-chrome)$
+}
+
+
+# Workspace 4: Development
+windowrule {
+  name = workspacerule-4
+  workspace = 4
+  match:class = ^(code-url-handler)$
+}
+
+windowrule {
+  name = workspacerule-5
+  workspace = 4
+  match:class = ^(code)$
+}
+
+
+# Workspace 5: Game Launchers
+windowrule {
+  name = workspacerule-6
+  workspace = 5
+  match:class = ^(steam)$
+}
+
+windowrule {
+  name = workspacerule-7
+  workspace = 5
+  match:class = ^(heroic)$
+}
+
+windowrule {
+  name = workspacerule-8
+  workspace = 5
+  match:class = ^(hydralauncher)$
+}
+
+
+# Workspace 6: Chat
+windowrule {
+  name = workspacerule-9
+  workspace = 6
+  match:class = ^(discord)$
+}
+
+
+
+# Workspace 7: The Games
+windowrule {
+  name = workspacerule-10
+  workspace = 7
+  match:class = ^(steam_app_.*)$
 }
