--- a/modules/settings.conf
+++ b/modules/settings.conf
@@ -1,6 +1,6 @@
 # --- PROGRAM VARIABLES ---
 $terminal = kitty
-$fileManager = dolphin 
+$fileManager = thunar 
 $menu = rofi -show drun
 $default_browser = firefox
 
